err_final.txt
C:\Users\volka\OneDrive\Masaüstü\masaüstüsistemi\temp.js:1046
        }).join('
                ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1735:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.1
